# craftvfs

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
